--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
   <%= yield %>
 <% else %>
   <header class="shadow-md bg-white">
-    <div class="max-w-7xl mx-auto px-8 lg:px-16 py-4 flex flex-col items-start lg:flex-row justify-between lg:items-center w-full ">
+    <div class="max-w-7xl mx-auto px-8 md:px-16 py-4 flex flex-col items-start md:flex-row justify-between md:items-center w-full ">
       <%= link_to root_path do %>
         <h4 class="font-bold">Telemedicine | CoronaSafe</h4>
       <% end %>
 
-      <div class="flex flex-col items-start lg:items-center lg:flex-row">
+      <div class="flex flex-col items-start md:items-center md:flex-row">
         <% if user_signed_in? and (not current_user.panchayat_admin?) %>
           <div class="mt-3 lg:mt-0">
             <%= simple_form_for :search, url: find_phone_path, method: "GET" do |f| %>
