--- a/app/views/consultations/_assign_form.html.erb
+++ b/app/views/consultations/_assign_form.html.erb
@@ -3,7 +3,7 @@
   <%= simple_form_for consultation, defaults: { input_html: { class: 'form-input mt-1' }, wrapper_html: { class: 'flex flex-col my-2' } } do |f| %>
     <%= f.association :doctor, collection: Doctor.all.uniq.map { |d| [d.name, d.id] }, required: true, label: 'Assign a Doctor', input_html: { class: 'form-select', id: 'dropdown-choice-select' } %>
     <div class="mt-4">
-      <%= f.button :submit, 'Assign Doctor', class: 'inline-flex items-center px-3 py-3 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
+      <%= f.button :submit, 'Assign', class: 'inline-flex items-center px-3 py-3 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
     </div>
   <% end %>
 </div>
