--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -16,9 +16,11 @@
     <div class="px-4 py-5 border-b border-gray-200 flex flex-col items-between justify-center  lg:flex-row lg:items-center lg:justify-between sm:px-6">
       <div class="w-full">
         <div>
-          <div class="<%= "bg-#{@consultation.action&.color}-200 inline-flex mx-auto px-2 rounded font-semibold" %>">
-            <%= @consultation.action&.name %>
-          </div>
+          <% @consultation.followups.where(completed_by: nil).each do |f| %>
+            <div class="<%= "bg-#{f.action&.color}-200 inline-flex mx-auto px-2 rounded font-semibold" %>">
+              <%= f.action&.name %>
+            </div>
+          <% end %>
         </div>
         <div class="flex md:flex-row flex-col justify-between">
           <div>
@@ -206,4 +208,39 @@
       </div>
     </div>
   </div>
+  <div class="mt-4">
+    <% @consultation.followups.each do |f| %>
+      <div class="bg-white shadow overflow-hidiven  rounded-lg mt-2 px-4 py-6 bg-<%= f.action.color %>-100">
+
+        <div class="text-xl font-semibold">
+          <span class="mr-2"><%= f.action.name %></span>
+
+          <% if f.completed_by.blank? %>
+            <div class="bg-white rounded shadow inline-block px-2 py-1">
+              Pending
+            </div>
+          <% end %>
+
+          <p class="mt-1 max-w-2xl text-sm leading-5 text-gray-500">
+            Follow up followup was created by
+            <span class="font-bold"><%= f.user.name %></span> <%= time_ago_in_words(f.created_at) %>
+            ago
+          </p>
+          <% if f.completed_by.present? %>
+            <div>
+              <p class="mt-1 max-w-2xl text-sm leading-5 text-gray-500">
+                Follow up followup was completed by
+                <span class="font-bold"><%= f.user.name %></span> <%= time_ago_in_words(f.created_at) %>
+                ago
+              </p>
+            </div>
+          <% else %>
+            <%= link_to 'Complete Now', complete_consultation_followup_path(@consultation, f), class: 'bg-white cursor-pointer rounded shadow inline-block px-2 py-1 bg-indigo-700 text-white mt-4' %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+
+  </div>
+  <%= render 'followup' %>
 </div>
