--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -2,7 +2,11 @@
   <div class="px-4 py-5 border-b border-gray-200 flex flex-col items-between justify-center  lg:flex-row lg:items-center lg:justify-between sm:px-6">
     <div>
       <h3 class="text-lg leading-6 font-medium text-gray-900">
-        EKM <%= @contact.id %> / <%= @contact.name %>
+        EKM <%= @contact.id %> /
+        <%= @contact.name.titleize %>,
+        <% if @contact.dob.present? %>
+          <%= @contact.age_from_dob %> Years
+        <% end %>
       </h3>
       <p class="mt-1 max-w-2xl text-sm leading-5 text-gray-500">
         Information regarding the Contact.
@@ -46,20 +50,6 @@
       <% end %>
       <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
         <dt class="text-sm leading-5 font-medium text-gray-500">
-          Last Called
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <% if @last_call %>
-            Called <span class="font-bold"><%= time_ago_in_words(@last_call.created_at) %></span> ago,
-            by <%= @last_call.user.email %>
-          <% else %>
-            Not called yet
-          <% end %>
-
-        </dd>
-      </div>
-      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
           Date of Birth
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
@@ -70,10 +60,10 @@
       </div>
       <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
         <dt class="text-sm leading-5 font-medium text-gray-500">
-          Age / Gender
+          Gender
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <%= @contact.gender.to_s.capitalize() %>, <%= @contact.age %> years old
+          <%= @contact.gender.to_s.capitalize() %>
         </dd>
       </div>
       <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
@@ -122,9 +112,9 @@
       <!--                    </p>-->
       <!--                  </div>-->
       <!--                  <div>-->
-      <!--                                <span class="text-xs">-->
-      <!--                                    <%#= time_ago_in_words(medical_req.created_at) %> ago-->
-      <!--                                </span>-->
+      <!--                                      <span class="text-xs">-->
+      <!--                                          <%#= time_ago_in_words(medical_req.created_at) %> ago-->
+      <!--                                      </span>-->
       <%# if current_user.admin? or current_user.district_admin? %>
       <%#= link_to 'Cancel', contact_medical_req_path(id: medical_req.id, contact_id: @contact.id), method: :delete, class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
       <%# end %>
@@ -165,9 +155,9 @@
       <!--                    </p>-->
       <!--                  </div>-->
       <!--                  <div>-->
-      <!--                                <span class="text-xs">-->
-      <!--                                    <%#= time_ago_in_words(non_medical_req.created_at) %> ago-->
-      <!--                                </span>-->
+      <!--                                      <span class="text-xs">-->
+      <!--                                          <%#= time_ago_in_words(non_medical_req.created_at) %> ago-->
+      <!--                                      </span>-->
       <%# if current_user.admin? or current_user.district_admin? %>
       <%#= link_to 'Cancel', contact_non_medical_req_path(id: non_medical_req.id, contact_id: @contact.id), method: :delete, class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
       <%# end %>
@@ -198,7 +188,6 @@
       <%# if not current_user.panchayat_admin? %>
       <%#= simple_form_for @contact, defaults: { input_html: { class: 'form-input mt-1 font-sans' }, wrapper_html: { class: 'flex flex-col my-4' }, label_html: { class: 'mb-1' } } do |f| %>
       <!--              <div class="">-->
-      <%#= f.input :willing_to_pay, label: 'Wiling to Pay for Request ?', input_html: { class: 'form-checkbox mr-1 p-2' } %>
       <%#= f.input :feedback, label: 'Feedback Comments if Any' %>
       <%#= f.button :submit, 'Save', class: 'inline-flex items-center px-3 py-3 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
       <!--              </div>-->
@@ -239,10 +228,7 @@
             <%= consultation.source %>
           </dd>
         </div>
-
-        <% if consultation.consultation_type == 'pharmacy' %>
-          <%= render 'consultations/status_form', consultation: consultation %>
-        <% elsif consultation.doctor_id.blank? %>
+        <% if consultation.doctor_id.blank? %>
           <%= render 'consultations/assign_form', consultation: consultation %>
         <% else %>
           <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:py-5">
