--- a/app/views/consultations/edit.html.erb
+++ b/app/views/consultations/edit.html.erb
@@ -27,7 +27,7 @@
 
           <%= f.input :endemic, collection: [['Yes', true], ['No', false]], as: :radio_buttons, input_html: { class: 'l' }, required: true, label: 'Is the patient from an endemic area?' %>
         </div>
-        <%= f.input :quarantined, collection: [['Yes', true], ['No', false]], as: :radio_buttons, input_html: { class: 'l' }, required: true, label: 'Is the patient Quarantined?' %>
+        <%= f.input :quarantined_on, label: 'Quarantined On', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4' }, as: :date, default: Date.today, required: false %>
         <div class="mt-4 text-xl font-semibold">
           Family Details
         </div>
@@ -41,6 +41,7 @@
           Test Details
         </div>
         <%= f.input :test_status, required: false, label: 'Test Status', input_html: { class: 'form-select' } %>
+        <%= f.input :sample_taken_on, label: 'Sample taken on', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4' }, as: :date, default: Date.today, required: false %>
 
         <div class="mt-4 text-xl font-semibold">
           Shifting Details
@@ -49,7 +50,7 @@
           <%= f.input :shift_from, label: 'Shifting from' %>
           <%= f.input :shift_to, label: 'Shifting to' %>
         </div>
-        <%= f.input :reason, label: 'Reason for shifting' %>
+        <%= f.input :reason, label: 'Reason for shifting', input_html: { class: 'form-select' } %>
 
         <div class="mt-4 text-xl font-semibold">
           Other Details
