--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -197,6 +197,9 @@
           </table>
         </div>
       </div>
+      <!--      hack to get colors-->
+      <div class="bg-gray-200 bg-red-200 bg-orange-200 bg-yellow-200 bg-green-200 bg-teal-200 bg-blue-200 bg-indigo-200 bg-purple-200 bg-pink-200">
+      </div>
     </div>
   <% end %>
 <% end %>
